update powered by

--- a/Private/Template.html
+++ b/Private/Template.html
@@ -50,7 +50,7 @@
             </div>
             <div class="flex spread" style="width: 50%; margin: auto;">
                 <div>Copyright<sup>&copy;</sup> 2020-2020 <a>Perigee</a></div>
-                <div>Powered by <a>Whatever<sup>&trade;</sup></a></div>
+                <div>Powered by <a href="https://www.heroku.com/">Heroku</a></div>
             </div>
         </div>
     </div>
