--- a/Private/Template.html
+++ b/Private/Template.html
@@ -44,12 +44,12 @@
         <div id="footer">
             <div class="flex spread">
                 <div><img class="logo" src="/Gmail.png"><br><a href="mailto:CharmindYT@gmail.com">CharmindYT@gmail.com</a></div>
-                <div><img class="logo" src="/GitHub.png"><br><a href="https://github.com/Flutterish">Flutterish</a></div>
-                <div><img class="logo" src="/Discord.png"><br><a>Ponka donkas pinka dong#6747</a></div>
+                <div><img class="logo" src="/GitHub.png"><br><a href="https://github.com/Flutterish">Peri</a></div>
+                <div><img class="logo" src="/Discord.png"><br><a>Perigee#6747</a></div>
                 <div><img class="logo" src="/SO.png"><br><a href="https://stackoverflow.com/users/5459101/flutterish">Flutterish</a></div>
             </div>
             <div class="flex spread" style="width: 50%; margin: auto;">
-                <div>Copyright<sup>&copy;</sup> 2020-2020 <a>Perigee</a></div>
+                <div>Copyright<sup>&copy;</sup> 2020-2021 <a>Perigee</a></div>
                 <div>Powered by <a href="https://www.heroku.com/">Heroku</a></div>
             </div>
         </div>
