change to work on gh-pages

--- a/Private/Template.html
+++ b/Private/Template.html
@@ -50,8 +50,8 @@
                 <div><img class="logo" alt="Stack Overflow" src="/SO.png"><br><a href="https://stackoverflow.com/users/5459101/flutterish">Flutterish</a></div>
             </div>
             <div class="flex spread" style="width: 50%; margin: auto;">
-                <div>Copyright<sup>&copy;</sup> 2020-2022 <a>Perigee</a></div>
-                <div>Powered by <a href="https://www.heroku.com/">Heroku</a></div>
+                <div>Copyright<sup>&copy;</sup> 2020-2025 <a>Perigee</a></div>
+                <div>Powered by <a href="https://github.com">Github Pages</a></div>
             </div>
         </div>
     </div>
