--- a/Private/Template.html
+++ b/Private/Template.html
@@ -44,7 +44,7 @@
         </div>
         <div id="footer">
             <div class="flex spread">
-                <div><img class="logo" alt="Gmail" src="/Gmail.png"><br><a href="mailto:CharmindYT@gmail.com">CharmindYT@gmail.com</a></div>
+                <div><img class="logo" alt="Gmail" src="/Gmail.png"><br><a href="mailto:periofthegee@gmail.com">periofthegee@gmail.com</a></div>
                 <div><img class="logo" alt="Github" src="/GitHub.png"><br><a href="https://github.com/Flutterish">Peri</a></div>
                 <div><img class="logo" alt="Discord" src="/Discord.png"><br><a>Perigee#6747</a></div>
                 <div><img class="logo" alt="Stack Overflow" src="/SO.png"><br><a href="https://stackoverflow.com/users/5459101/flutterish">Flutterish</a></div>
